# voice-ai

./: .editorconfig  .env.example  .gitignore  .vercelignore  README.md  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
.github/workflows/: agent-deploy.yml  lint.yml  webapp-lint.yml
agent/: .env.example  Dockerfile  livekit.toml  main.py  pyproject.toml  requirements.txt
agent/src/: agent.py  memory.py  rpc.py  userdata.py  weather.py
docs/: openapi.json
public/: manifest.json
src/: middleware.ts
src/app/: CalendarCard.tsx  ChatInput.tsx  ChatWindow.tsx  Sidebar.tsx  WeatherCard.tsx  globals.css  layout.tsx  page.tsx  sw.ts
src/app/calendar/: page.tsx
src/app/chat/: page.tsx
src/app/health/: route.ts
src/app/hooks/: agent.ts
src/app/login/: page.tsx
src/app/premium/: page.tsx
src/app/signup/: page.tsx
src/app/test/: page.tsx
src/app/utils/: location.ts
src/components/: ChatHistory.tsx  HomeCard.tsx  HomeMicChatPage.tsx  LiveKitRoom.tsx  Logo.tsx  NavBar.tsx  ReminderPushNotificationHandler.tsx  RemindersView.tsx  ResponaLogo.tsx  Splash.tsx  SplashGate.tsx  TRPCProvider.tsx  TextChatHandler.tsx  VoiceAIAgent.tsx  VoiceAIAgentContainer.tsx  VoiceButton.tsx  VoiceModelSettings.tsx  VoiceTranscriptionHandler.tsx
src/lib/: location.ts  models.ts  push.ts  trpc.ts  utils.ts
src/lib/client/: utils.ts
src/server/: context.ts  index.ts  livekit.ts  push.ts  ratelimit.ts  trpc.ts  voices.ts
src/service-worker/: index.ts
src/trpc/: react.ts
(+41 files in other folders)
