[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "livekit~=1.0",
  "livekit-agents[assemblyai,elevenlabs,openai,silero,turn-detector]~=1.2",
  "mem0ai>=1.0.0",
  "opencage>=3.2.0",
  "orjson>=3.11.3",
  "pyowm>=3.5.0",
  "python-dotenv",
]
